pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apache
  namespace: pathashala
spec:
  containers:
  - name: apache
    image: httpd:latest
    ports:
    - containerPort: 80
