route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-ingress
  namespace: apache-namespace
spec:
  rules:
  - host: apache-local.com  # Set your desired hostname
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: apache-service
            port:
              number: 8080
